--- a/TODOAppFrontend/package.json
+++ b/TODOAppFrontend/package.json
@@ -12,7 +12,8 @@
     "@vue/eslint-config-standard": "^4.0.0",
     "axios": "^1.6.8",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vite": "^5.2.8"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
@@ -23,7 +24,6 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^9.9.0",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
-    "vite": "^5.2.8"
+    "tailwindcss": "^3.4.3"
   }
 }
